# ZZP-SE

./: README.md  readme.md
DBOG/: DBOGaccess.hpp  DBOGdemo.cpp  readme.md
FPKS2E/: makefile  readme.md
FPKS2E/include/: FPKS2E.cpp  FPKS2E.h
FPKS2E/result/: search1_output.txt  search2_output.txt  search_output.txt
FPKS2E/src/: main.cpp
FPKS2E/utils/: com.cpp  com.h  encrypt.cpp  encrypt.h  utils.cpp  utils.h
KS2E/: makefile  readme-KS2E.md  readme.md
KS2E-DB/: makefile
KS2E-DB-bind/: CMakeLists.txt  demo.py  makefile  readme.md
KS2E-DB-bind/cpython/: setup.py
KS2E-DB-bind/include/: DBOGaccess.hpp  KS2E.cpp  KS2E.h
KS2E-DB-bind/performace/: memory.txt
KS2E-DB-bind/result/: plain120.txt  record120-1.txt  record12000-1.txt  search_owner_id_output.txt  search_owner_w_output.txt  search_user_id_output.txt  search_user_w_output.txt  u_share_id.txt  u_share_w.txt
KS2E-DB-bind/src/: gen_id  gen_id.cpp  i_client.cpp  i_owner.cpp  i_server.cpp  i_user.cpp  main.cpp  testmem.cpp
KS2E-DB-bind/test/: DBOGdemo.cpp  datatest.cpp  dbClient.hpp  testpq
KS2E-DB-bind/utils/: inter.cpp  inter.h  utils.h
KS2E-DB/include/: KS2E.cpp  KS2E.h
KS2E-DB/result/: cigar.txt  plain.txt  search1_w_output.txt  search2_id_output.txt  search_owner_id_output.txt  search_owner_w_output.txt  search_user_id_output.txt  search_user_w_output.txt  u_share_id.txt  u_share_w.txt
LPSI_demo/: makefile
Protocol_Test/: makefile
Protocol_Test_KS2E/: readme.md
include/: LPSI.cpp  encrypt.cpp
result/: X.txt  Y.txt  output.txt
src/: main.cpp
utils/: utils.cpp  utils.h
(+56 files in other folders)
